syntax = "proto3";

import "commons.proto";

option java_multiple_files = true;
option java_package = "org.ebi.ensembl.grpc.coord";
option java_outer_classname = "CoordSystemAdaptorProto";

service CoordSystemAdaptor {
  rpc FetchAll(EmptyRequest) returns (FetchAllCoordSystemResponse) {};
  rpc FetchByRank(FetchByCoordSystemRankRequest) returns (CoordSystem) {};
  rpc FetchByName(FetchByCoordSystemNameRequest) returns (CoordSystem) {};
  rpc FetchSequenceLevel(EmptyRequest) returns (CoordSystem) {};
  rpc FetchTopLevel(EmptyRequest) returns (CoordSystem) {};
}

message FetchAllCoordSystemResponse {
  repeated CoordSystem coord_systems = 1;
}

message FetchByCoordSystemNameRequest {
  RequestMetadata request_metadata = 1;
  string name = 2;
  optional string version = 3;
}

message FetchByCoordSystemRankRequest {
  RequestMetadata request_metadata = 1;
  int32 rank = 2;
}
